--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,14 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
