--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/service-bus": "^7.4.0",
     "@types/node": "^17.0.14",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.25.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
