Working file upload endpoint

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/cosmos": "^3.15.1",
     "@azure/service-bus": "^7.4.0",
+    "@azure/storage-blob": "^12.8.0",
     "@types/node": "^17.0.14",
     "@types/uuid": "^8.3.4",
     "axios": "^0.25.0",
