--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/uuid": "^8.3.4",
     "axios": "^0.25.0",
     "busboy": "^1.4.0",
+    "pg": "^8.7.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "@types/busboy": "^1.3.0",
+    "@types/pg": "^8.6.4",
     "typescript": "^4.0.0"
   }
 }
